--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^7.3.1",
     "@supabase/supabase-js": "^2.54.0",
     "firebase": "^12.1.0",
+    "lucide-react": "^0.539.0",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -21,6 +22,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "styled-components": "^6.1.19",
+    "tw-animate-css": "^1.3.6",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
