--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "@supabase/supabase-js": "^2.54.0",
     "firebase": "^12.1.0",
     "lucide-react": "^0.539.0",
@@ -21,6 +22,7 @@
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "styled-components": "^6.1.19",
     "tw-animate-css": "^1.3.6",
     "uuid": "^11.1.0"
