--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^12.1.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.5",
+    "nodemailer": "^7.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
